--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "generate": "nuxt generate",
     "prepare": "husky",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "pnpm lint:js && pnpm lint:prettier",
+    "lint:js": "eslint ./src",
+    "lint:prettier": "prettier --check .",
+    "lint:fix": "prettier --write --list-different . && pnpm lint:js --fix"
   },
   "dependencies": {
+    "@nuxt/eslint": "^0.3.13",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
@@ -18,6 +23,9 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "husky": "^9.0.11"
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "prettier": "^3.3.0"
   }
 }
